--- a/.eslintrc
+++ b/.eslintrc
@@ -60,5 +60,5 @@
     "plugins": [
       "react"
     ],
-    "extends": ["eslint:recommended", "plugin:react/recommended"]
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:import/errors", "plugin:import/warnings"]
 }
