--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "redux-actions": "^0.9.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^1.14.1",
-    "webpack-dashboard": "^0.1.6",
+    "eslint": "3.14.0",
+    "eslint-plugin-import": "^2.7.0",
     "react-hot-loader": "^1.3.0",
-    "webpack-hot-middleware": "^2.7.1",
-    "eslint-plugin-react": "~5.1.1"
+    "webpack-dashboard": "^0.1.6",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.7.1"
   },
   "license": "Apache-2.0"
 }
