--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
+    "react-router-dom": "^4.2.2",
     "redux-saga": "^0.15.3",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
