--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
     "build": "rm -rf dist/ && NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors"
   },
   "dependencies": {
+    "autoprefixer": "^6.4.0",
     "axios": "0.15.2",
-    "normalize.css": "^4.1.1",
-    "babel-plugin-antd": "~0.4.0",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-antd": "~0.4.0",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "postcss-loader": "^0.8.1",
-    "style-loader": "^0.13.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "file-loader": "^0.8.5",
-    "url-loader": "~0.5.7",
-    "json-loader": "~0.5.4",
-    "autoprefixer": "^6.4.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.17.0",
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.3",
+    "css-loader": "^0.23.1",
+    "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.17.0",
+    "json-loader": "~0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "normalize.css": "^4.1.1",
+    "postcss-loader": "^0.8.1",
     "qs": "6.3.0",
-    "webpack": "^1.12.14",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.0",
     "react-router-dom": "^4.2.2",
-    "redux-saga": "^0.15.3",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
-    "redux-actions": "^0.9.1"
+    "redux-actions": "^0.9.1",
+    "redux-saga": "^0.15.3",
+    "style-loader": "^0.13.0",
+    "url-loader": "~0.5.7",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "eslint": "3.14.0",
