--- a/package.json
+++ b/package.json
@@ -1,30 +1,57 @@
 {
-  "name": "boilerplate_2",
-  "version": "0.0.1",
+  "name": "react_boilerplate",
+  "version": "0.0.2",
   "private": true,
-  "description": "it builds with react,redux,react-redux-router,webpack,babel,es6,autoprefixer,hmr,css-module etc",
-  "main": "index.js",
-  "repository": "git@code.59store.com:fe/rrrw.git",
+  "description": "Quick boilerplate with React, redux, webpack( with HMR) and redux dev tool ",
+  "main": "index.html",
+  "repository": "git@github.com:ankitsin/react_boilerplate.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dashboard  -c cyan -- webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 5959",
-    "build": "rm -rf dist/ && NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors"
+    "start": "webpack-dashboard -m  -c cyan -- webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 6060",
+    "build": "rm -rf dist/ && NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
+    "lint": "./node_modules/.bin/eslint --config=.eslintrc.json ./**/*.{jsx,js}",
+    "polish": "npm run lint -s -- --fix"
   },
   "dependencies": {
     "autoprefixer": "^6.4.0",
     "axios": "0.15.2",
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.3",
     "babel-plugin-antd": "~0.4.0",
     "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.3",
-    "css-loader": "^0.23.1",
-    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "qs": "6.3.0",
+    "react": "15.0.0",
+    "react-dom": "^15.0.0",
+    "react-redux": "^4.4.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.3.1",
+    "redux-actions": "^0.9.1",
+    "redux-saga": "^0.15.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.23.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "14.0.0",
+    "eslint-config-standard": "^6.1.0",
+    "eslint-config-standard-jsx": "^3.1.0",
+    "eslint-config-standard-react": "^4.1.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^7.5.0",
+    "eslint-plugin-standard": "2.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
     "json-loader": "~0.5.4",
@@ -32,26 +59,15 @@
     "less-loader": "^2.2.3",
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.8.1",
-    "qs": "6.3.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^4.4.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.0",
-    "redux": "^3.3.1",
-    "redux-actions": "^0.9.1",
-    "redux-saga": "^0.15.3",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "^1.12.14"
+    "webpack": "^3.8.1",
+    "webpack-dashboard": "^0.1.8",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.4"
   },
-  "devDependencies": {
-    "eslint": "3.14.0",
-    "eslint-plugin-import": "^2.7.0",
-    "react-hot-loader": "^1.3.0",
-    "webpack-dashboard": "^0.1.6",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1"
-  },
-  "license": "Apache-2.0"
+  "author": "Ankit Singh",
+  "license": "ISC"
 }
