--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "repository": "git@github.com:ankitsin/react_boilerplate.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dashboard -m  -c cyan -- webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 6060",
-    "build": "rm -rf dist/ && NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
+    "start": "webpack-dashboard -- webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 6060",
+    "build": "rm -rf dist && mkdir dist && cp -r src/assets dist/assets && NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
     "lint": "./node_modules/.bin/eslint --config=.eslintrc.json ./**/*.{jsx,js}",
     "polish": "npm run lint -s -- --fix"
   },
   "dependencies": {
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^7.1.6",
     "axios": "0.15.2",
     "babel-plugin-antd": "~0.4.0",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "normalize": "^0.3.1",
+    "prop-types": "^15.6.0",
     "qs": "6.3.0",
     "react": "15.0.0",
-    "react-dom": "^15.0.0",
+    "react-dom": "15.0.0",
     "react-redux": "^4.4.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.0",
@@ -39,7 +41,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-config-standard": "^6.1.0",
@@ -54,17 +56,17 @@
     "eslint-plugin-standard": "2.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
-    "json-loader": "~0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "normalize.css": "^4.1.1",
-    "postcss-loader": "^0.8.1",
+    "json-loader": "^0.5.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "normalize.css": "^7.0.0",
+    "postcss-loader": "^2.0.8",
     "react-hot-loader": "^1.3.0",
     "redux-devtools-extension": "^2.13.2",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.19.0",
     "url-loader": "~0.5.7",
     "webpack": "^3.8.1",
-    "webpack-dashboard": "^0.1.8",
+    "webpack-dashboard": "1.0.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.4"
   },
